FIX like icon overflowing when title wrap

--- a/src/scss/components/_photo-card.scss
+++ b/src/scss/components/_photo-card.scss
@@ -27,6 +27,7 @@
     display: flex;
     align-items: center;
     gap: 0.637rem;
+    flex-shrink: 0;
   }
 
   &__likes-icon {
